# Kandidat360Degrees

./: .gitignore  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/jni/: Android.mk  HeapInfo.cpp  HeapInfo.h  JniMatHolder.cpp  JniMatHolder.h  com_ciux031701_kandidat360degrees_representation_NativePanorama.cpp  com_ciux031701_kandidat360degrees_representation_NativePanorama.h
app/src/main/res/drawable/: border.xml  list_divider.xml  progressbar_capture.xml  roundcorner.xml  rounded_button.xml
app/src/main/res/layout/: activity_login.xml  activity_main.xml  drawer_footer.xml  drawer_header.xml  drawer_list_item.xml  fragment_camera.xml  fragment_createaccount.xml  fragment_createaccount_congratulations.xml  fragment_createaccount_feedback.xml  fragment_explore.xml  fragment_friend_item_section.xml  fragment_friends.xml  fragment_imageview.xml  fragment_login.xml  fragment_notification.xml  fragment_profile.xml  fragment_settings.xml  fragment_share.xml  fragment_upload.xml  friends_list_item.xml  map_search_item.xml  marker_info_explore_view.xml  marker_info_window.xml  notification_friend_item.xml  notification_image_item.xml  picture_profile_layout.xml  share_friends_list_item.xml  tool_bar.xml  tool_bar_text.xml
app/src/main/res/menu/: tool_menu.xml  toolmenu_search.xml  toolmenu_search_friends.xml  toolmenu_share.xml
app/src/main/res/raw/: style_json
app/src/main/res/values/: colors.xml  dimens.xml  google_maps_api.xml  strings.xml  styles.xml
app/src/main/res/xml/: searchable.xml
(+120 files in other folders)
