set(pathToProject C:/Users/Neso/Documents/Kandidatarbete/Kandidat360Degrees)
set(pathToOpenCv C:/Users/Neso/Documents/Kandidatarbete/Kandidat360Degrees/OpenCV-android-sdk)
set(CMAKE_VERBOSE_MAKEFILE on)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")

cmake_minimum_required(VERSION 3.4.1)
			 
include_directories(${pathToOpenCv}/sdk/native/jni/include)

add_library(native-lib
             SHARED
             src/main/jni/HeapInfo.cpp 
			 src/main/jni/JniMatHolder.cpp 
			 src/main/jni/com_ciux031701_kandidat360degrees_representation_NativePanorama.cpp )

add_library( lib_opencv SHARED IMPORTED )
set_target_properties(lib_opencv PROPERTIES IMPORTED_LOCATION ${pathToProject}/app/src/main/jniLibs/${ANDROID_ABI}/libopencv_java3.so)
find_library( log-lib log )
target_link_libraries( native-lib ${log-lib} )
target_link_libraries( native-lib ${log-lib} lib_opencv)